# askpolis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: backend.yaml  backend.yml  build.yaml  build.yml
backend/: .dockerignore  AGENTS.md  Dockerfile  README.md  compose.yaml  ollama.Dockerfile  pyproject.toml  pytest.ini
backend/src/: alembic.ini  main.py  tasks.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 0bc41aaee68f_rename_crawling_results_table.py  115433b912f3_add_citations_table.py  123456789abc_add_page_versions_table.py  147619a67ee1_add_pgvector_extension.py  1b3e1b887c35_remove_langchain_tables.py  323cf93d21fb_add_raw_content_to_page.py  489b0743314c_add_label_column_to_election_programs_.py  4ee6341a2884_add_vector_index.py  556e6bab86d4_add_unique_name_indexes.py  6dcdadab04b6_add_embeddings_tables.py  77216f666286_add_crawling_results_table.py  79cf11662b6f_add_document_page_tables.py  a1b2c3d4e5f6_add_unique_index_on_document_refs.py  b1c57116f6d7_add_enum_colums_to_fetched_data_table.py  b7b091f333f9_add_core_tables.py  c2a2dd9f9ec7_add_chunk_id_column_to_embeddings.py  d4ccab584cc8_add_chunk_id_column_to_embeddings.py  e25be9ff9c7e_add_dense_and_sparse_embeddings_indexes.py  eaf0c2631dbf_add_questions_answers_tables.py  f3d1c1c1f4d8_add_tenant_id_to_questions.py  fe993b39c6fd_add_sparse_embeddings_column.py  ff3d5ee26d03_add_updated_at_to_core_models.py  ff9b556679a6_rename_index.py
backend/src/askpolis/: celery.py  jsonapi.py  logging.py  main.py  rate_limiting.py  task_utils.py  tasks.py  telemetry.py
backend/src/askpolis/core/: __init__.py  database.py  dependencies.py  markdown_splitter.py  models.py  pdf_reader.py  repositories.py  routes.py  tasks.py  tenant_repository.py
backend/src/askpolis/crawler/: __init__.py  database.py  tasks.py
backend/src/askpolis/crawler/abgeordnetenwatch/: __init__.py  client.py  crawler.py
backend/src/askpolis/data_fetcher/: __init__.py  database.py  models.py  repositories.py  tasks.py
backend/src/askpolis/data_fetcher/abgeordnetenwatch/: __init__.py  client.py  data_fetcher.py
backend/src/askpolis/db/: dependencies.py
backend/src/askpolis/qa/: __init__.py  agents.py  dependencies.py  models.py  qa_service.py  repositories.py  routes.py  schedulers.py  tasks.py
backend/src/askpolis/search/: __init__.py  database.py  dependencies.py  embeddings_service.py  models.py  repositories.py  reranker_service.py  routes.py  search_service.py  tasks.py
backend/src/scripts/: start-api.sh  start-scheduler.sh  start-worker.sh
backend/tests/: __init__.py  conftest.py
backend/tests/end2end/: conftest.py  smoke_test.py  test_e2e_dummy.py
backend/tests/integration/: conftest.py  migrations_test.py  test_migrations.py
backend/tests/integration/core/: models_database_test.py  pdf_reader_test.py  repositories_test.py
backend/tests/integration/data_fetcher/: database_test.py  repositories_test.py
backend/tests/integration/qa/: repositories_test.py
backend/tests/integration/search/: database_test.py  repositories_test.py
backend/tests/unit/: jsonapi_test.py  probes_test.py  rate_limit_middleware_test.py  telemetry_test.py
backend/tests/unit/api/: document_routes_test.py
backend/tests/unit/core/: markdown_splitter_test.py  models_test.py  pdf_reader_test.py  routes_test.py
backend/tests/unit/data_fetcher/: fetched_data_test.py  tasks_test.py
backend/tests/unit/data_fetcher/abgeordnetenwatch/: data_fetcher_test.py
backend/tests/unit/qa/: models_test.py  routes_test.py  tasks_test.py
backend/tests/unit/search/: embeddings_service_test.py  model_singleton_test.py  tasks_test.py
data/: real-o-mat_license_CC-BY-SA_4.0_downloaded_06022025.json
demo/: README.md
docs/: README.md
infrastructure/: README.md
infrastructure/configs/: fluent-bit.conf  loki.yaml  otel-collector-config.yaml  otel-collector.yaml  tempo.yaml
infrastructure/configs/fluent-bit/: docker-metadata.lua  fluent-bit-compose.conf
infrastructure/configs/grafana/: datasources.yaml
website/: README.md
