[tool.poetry]
name = "askpolis"
version = "0.1.0"
description = ""
authors = ["Felix Müller <felix@fmueller.io>"]
license = "AGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
fastapi = "^0.115.14"
langchain = "^0.3.26"
sentence-transformers = "^4.1.0"
torch = { version = "^2.7.1+cpu", source = "pytorch" }
einops = "^0.8.1"
celery = "^5.5.3"
redis = "^6.2.0"
pymupdf = "^1.26.3"
pymupdf4llm = "^0.0.24"
sqlalchemy = "^2.0.41"
alembic = "^1.16.2"
psycopg-binary = "^3.2.9"
celery-typed-tasks = "^0.1.25"
opentelemetry-distro = "^0.50b0"
opentelemetry-instrumentation-fastapi = "^0.50b0"
opentelemetry-instrumentation-logging = "^0.50b0"
opentelemetry-instrumentation-celery = "^0.50b0"
opentelemetry-exporter-otlp = "^1.29.0"
opentelemetry-instrumentation-requests = "^0.50b0"
opentelemetry-instrumentation-redis = "^0.50b0"
opentelemetry-instrumentation-system-metrics = "^0.50b0"
opentelemetry-instrumentation-sqlalchemy = "^0.50b0"
uuid-utils = "^0.11.0"
psycopg = "^3.2.9"
psycopg-pool = "^3.2.6"
flagembedding = "^1.3.5"
pgvector = "^0.4.1"
pydantic-ai-slim = {extras = ["openai"], version = "^0.3.7"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
testcontainers = { extras = ["postgres"], version = "^4.10.0" }
ruff = "^0.12.2"
mypy = "^1.16.1"
celery-types = "^0.23.0"
types-requests = "^2.32.4.20250611"
pre-commit = "^4.2.0"
sqlalchemy = { extras = ["mypy"], version = "^2.0.41" }
faker = "^37.4.0"
types-docker = "^7.1.0.20250705"
types-pyyaml = "^6.0.12.20250516"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = "src/**/*.py,tests/**/*.py"
strict = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
untyped_calls_exclude = ["sqlalchemy.dialects", "sqlalchemy.orm.mapped_column"]

[[tool.mypy.overrides]]
module = ["celery_typed_tasks.*", "FlagEmbedding.*", "testcontainers.*", "pgvector.*", "pymupdf4llm.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
