[tool.poetry]
name = "askpolis"
version = "0.1.0"
description = ""
authors = ["Felix Müller <felix@fmueller.io>"]
license = "AGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uvicorn = { extras = ["standard"], version = "~0.37.0" }
fastapi = "^0.119.0"
langchain = "^0.3.26"
sentence-transformers = "^5.1.1"
torch = "~2.8.0"
einops = "~0.8.1"
celery = "^5.5.3"
redis = "^6.2.0"
pymupdf = "^1.26.3"
pymupdf4llm = "^0.0.27"
sqlalchemy = "^2.0.44"
alembic = "^1.16.5"
psycopg-binary = "^3.2.10"
celery-typed-tasks = "^0.1.25"
opentelemetry-distro = "^0.56b0"
opentelemetry-instrumentation-fastapi = "^0.56b0"
opentelemetry-instrumentation-logging = "^0.56b0"
opentelemetry-instrumentation-celery = "^0.56b0"
opentelemetry-exporter-otlp = "^1.35.0"
opentelemetry-instrumentation-requests = "^0.56b0"
opentelemetry-instrumentation-redis = "^0.56b0"
opentelemetry-instrumentation-system-metrics = "^0.56b0"
opentelemetry-instrumentation-sqlalchemy = "^0.56b0"
uuid-utils = "^0.11.0"
psycopg = "^3.2.9"
psycopg-pool = "^3.2.6"
flagembedding = "^1.3.5"
pgvector = "^0.4.1"
pydantic-ai-slim = {extras = ["openai"], version = "^0.8.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
testcontainers = { extras = ["postgres"], version = "^4.13.0" }
ruff = "^0.14.0"
mypy = "^1.18.1"
celery-types = "^0.23.0"
types-requests = "^2.32.4.20250913"
pre-commit = "^4.2.0"
sqlalchemy = { extras = ["mypy"], version = "^2.0.44" }
faker = "^37.5.3"
types-docker = "^7.1.0.20250916"
types-pyyaml = "^6.0.12.20250915"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = "src/**/*.py,tests/**/*.py"
strict = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
untyped_calls_exclude = ["sqlalchemy.dialects", "sqlalchemy.orm.mapped_column", "transformers"]

[[tool.mypy.overrides]]
module = ["celery_typed_tasks.*", "FlagEmbedding.*", "testcontainers.*", "pgvector.*", "pymupdf4llm.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
