[tool.poetry]
name = "askpolis"
version = "0.1.0"
description = ""
authors = ["Felix Müller <felix@fmueller.io>"]
license = "AGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uvicorn = { extras = ["standard"], version = "~0.40.0" }
fastapi = "^0.128.0"
langchain = "^1.2.7"
sentence-transformers = "^5.2.2"
torch = "~2.10.0"
einops = "~0.8.2"
celery = "^5.6.2"
redis = "^7.0.1"
pymupdf = "^1.26.6"
pymupdf4llm = "^0.2.9"
sqlalchemy = "^2.0.46"
alembic = "^1.18.2"
psycopg-binary = "^3.2.12"
celery-typed-tasks = "^0.1.25"
opentelemetry-distro = "^0.56b0"
opentelemetry-instrumentation-fastapi = "^0.56b0"
opentelemetry-instrumentation-logging = "^0.56b0"
opentelemetry-instrumentation-celery = "^0.56b0"
opentelemetry-exporter-otlp = "^1.35.0"
opentelemetry-instrumentation-requests = "^0.56b0"
opentelemetry-instrumentation-redis = "^0.56b0"
opentelemetry-instrumentation-system-metrics = "^0.56b0"
opentelemetry-instrumentation-sqlalchemy = "^0.56b0"
uuid-utils = "^0.14.0"
psycopg = "^3.2.13"
psycopg-pool = "^3.2.8"
flagembedding = "^1.3.5"
pgvector = "^0.4.1"
pydantic-ai-slim = {extras = ["openai"], version = "^1.48.0"}
langchain-text-splitters = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
testcontainers = { extras = ["postgres"], version = "^4.14.1" }
ruff = "^0.15.0"
mypy = "^1.19.0"
celery-types = "^0.24.0"
types-requests = "^2.32.4.20260107"
pre-commit = "^4.5.1"
sqlalchemy = { extras = ["mypy"], version = "^2.0.46" }
faker = "^40.1.2"
types-docker = "^7.1.0.20260109"
types-pyyaml = "^6.0.12.20250915"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = "src/**/*.py,tests/**/*.py"
strict = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_unused_ignores = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
untyped_calls_exclude = ["sqlalchemy.dialects", "sqlalchemy.orm.mapped_column", "transformers"]

[[tool.mypy.overrides]]
module = ["celery_typed_tasks.*", "FlagEmbedding.*", "testcontainers.*", "pgvector.*", "pymupdf4llm.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
